events and make it less intro-y

--- a/app/views/home/sections/_intro2019.html.erb
+++ b/app/views/home/sections/_intro2019.html.erb
@@ -3,7 +3,7 @@
     <div class="row">
       <div class="col-lg-12 text-center">
         <h2 class="section-heading">
-          ANNOUNCING OUR 2019 SEASON!
+          OUR 2019 SEASON
         </h2>
         <hr class="primary">
       </div>
@@ -14,13 +14,108 @@
     <div class="row text-center">
       <div class="col-md-10 col-md-offset-1">
         <h3 class="fugu-h3">
-          INTRODUCTION
+          EVENTS
         </h3>
         <br />
-        <p class="">
+        <h5>
+          All concerts (unless noted) are held at WSAC.
+        <h5>
+          <h5>
+          All concerts are free.
+        <h5>
+      </div>
+      <div class="row">
+        <div class="col-md-5 col-md-offset-1 col-sm-12">
+          <h3>welcome concert</h3>
+          <h4>friday, 11 January 2019, 8pm</h4>
+          <p class="p-top-5">
+            four pieces happening concurrently
+            <br />
+            centrally located at wsac (map will be provided)
+            <br />
+            - sarah ayotomiwa pitan, wsac
+            <br />
+            - nilo goldfarb, perry park (take a right out of wsac, 2 min walk)
+            <br />
+            - jennie gottschalk, wsac parking Lot
+            <br />
+            - chris strunk (scooter france), sidewalk by wsac
+            <br />
+          </p>
+          <p>
+            <a href="https://www.facebook.com/events/2249434621976221/" target="_blank">facebook event</a>
+          </p>
+        </div>
+        <div class="col-md-5 col-sm-12">
+          <h3>guest artist showcase #1</h3>
+          <h4>saturday, 12 january 2019, 8pm</h4>
+          <p class="p-top-5">
+            <b> featuring music by: </b>
+            <br />
+            - john eagle
+            <br />
+            - joachim eckl
+            <br />
+            - jordan dykstra
+            <br />
+            - tim tsang
+            <br />
+            - clara allison
+          </p>
+          <p>
+            <a href="https://www.facebook.com/events/210640833219347/" target="_blank">facebook event</a>
+          </p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-5 col-md-offset-1 col-sm-12">
+          <h3>Guest Artist Showcase #2</h3>
+          <h4>sunday, 13 january 2019, 7pm</h4>
+          <p class="p-top-5">
+            <b> reaturing music by: </b>
+            <br />
+            - angeles rojas
+            <br />
+            - luke martin
+            <br />
+            - michael pisaro
+            <br />
+            - aaron foster breilyn
+            <br />
+            - derek baron
+          </p>
+          <p>
+            <a href="https://www.facebook.com/events/322452958599560/" target="_blank">facebook event</a>
+          </p>
+        </div>
+        <div class="col-md-5 col-sm-12">
+          <h3>final concert</h3>
+          <h4>saturday, 19 january 2019, 8pm</h4>
+          <p class="p-top-5">
+            A presentation / performance of the artists' work and documentation accumulated during the Festival.
+          </p>
+          <p>
+            <a href="https://www.facebook.com/events/386601742094981/" target="_blank">facebook event</a>
+          </p>
+        </div>
+      </div>
+    </div>
+  </div>
+
+
+
+  <div class="container">
+    <div class="row text-center">
+      <div class="col-md-10 col-md-offset-1">
+        <h3 class="fugu-h3">
+          <!-- INTRODUCTION -->
+          DESCRIPTION
+        </h3>
+        <br />
+         <p class="">
           the third season of the co-incidence festival will take place from January 11—20, 2019, at Washington Street Art Center in Somerville, MA. as with the past two years, the overarching goal of the festival is to bring together experimental composers/performers/artists to focus on collaboration, critical discussion, workshopping, and performance. in 2019, this will last 8 full days (not including arrival and departure days). the festival is directed by experimental composer/performers aaron foster breilyn and luke martin.
         </p>
-        <p>
+        <!--<p>
           though there are conceptual areas of exploration that are common between iterations of the festival, the attending artists (both guest and resident) are encouraged to influence and even drastically alter the direction and activities of the festival. this year topics of focus will include  conversation as artistic labor, mapping as praxis, nomadic movement, and complicity as a mode of critical exchange between others. 
         </p>
         <p>
@@ -36,14 +131,14 @@
         <br />
         <p>
           co-incidence will occur at Washington Street Art Center (WSAC) in Somerville, MA. the space will serve as a meeting place for discussion, workshop, performance, and a hot pot of coffee. activities may take place at WSAC (which also serves as an experimental music venue in Boston), though they are not limited to that space. in fact, we encourage activities that may occur anywhere in the city / Somerville / greater Boston area, be entirely based on the potential of their occurrence, and/or may not even be perceptible.
-        </p>
+        </p> -->
         <p>
           this year, the festival will follow a set of maps that score the flow of concepts and events, by way of nomadic movement through the structure of the residency. only certain major meeting points (arrival, departure, a couple pre-scheduled concerts) will be predetermined. the structure of the festival will be centered on daily conversations led by Sarah, and other impromptu events as they are determined collectively, by the group. last year, such impromptu events or activities included Ryoko making lunch for/with us at luke’s apartment, having Joachim lead us on a tour of the Museum of Fine Arts, and so on. 
         </p>
         <p>
           these are open and everyday situations; practices of being together. in preparation for our daily conversations, Sarah will present a toolbox of (~3) readings that highlight certain concepts important to the festival. free PDF’s of these readings, which will likely include essays by Deleuze & Guattari, Negarestani, and Brassier, will be available on our website after the artists are selected. while we will not be presenting on these readings or concepts, we will be moving the concepts, communally learning about and through them to build other possible structures/concepts/tactics.
         </p>
-        <br />
+        <!-- <br />
         <h3 class="fugu-h3">
           logistics / economics
         </h3>
@@ -55,7 +150,7 @@
         <h3 class="fugu-h3">
           conclusion
         </h3>
-        <br />
+        <br /> -->
         <p>
           we are creating this festival as a conscious instance of composition as social practice. we hope that this act and ethos becomes even further developed during the course of our work together. ultimately, we hope that this can become a truly special week of collaboration, discussion, performance, and composition; one in which we can form lasting and caring relationships, establish practical tactics with which we can hone our daily practices and challenge structures of capital, and investigate radically alternative modes of being, thinking, and relating.
         </p>
