--- a/app/assets/stylesheets/mine.scss
+++ b/app/assets/stylesheets/mine.scss
@@ -249,4 +249,10 @@ textarea.form-control {
   height: 60px !important;
 }
 
+.p-top-5 {
+  padding-top: 5px;
+}
 
+.m-top-10 {
+  margin-top: 10px;
+}
