clean up current festival stuff

--- a/app/views/home/sections/_intro2019.html.erb
+++ b/app/views/home/sections/_intro2019.html.erb
@@ -18,7 +18,7 @@
         </h3>
         <br />
         <h5>
-          All concerts (unless noted) are held at WSAC.
+          All concerts (unless noted) are held at <a href="https://www.google.com/maps/place/321+Washington+St,+Somerville,+MA+02143/@42.3800344,-71.1037514,17z/data=!3m1!4b1!4m5!3m4!1s0x89e377359759d4f1:0xcdecfc966d18c6ce!8m2!3d42.3800305!4d-71.1015627" target="_blank_">WSAC</a>.
         <h5>
           <h5>
           All concerts are free.
@@ -27,7 +27,7 @@
       <div class="row">
         <div class="col-md-5 col-md-offset-1 col-sm-12">
           <h3>welcome concert</h3>
-          <h4>friday, 11 January 2019, 8pm</h4>
+          <h4>friday, 11 january 2019, 8pm</h4>
           <p class="p-top-5">
             four pieces happening concurrently
             <br />
@@ -35,11 +35,11 @@
             <br />
             - sarah ayotomiwa pitan, wsac
             <br />
-            - nilo goldfarb, perry park (take a right out of wsac, 2 min walk)
+            - nilo goldfarb, <a href="https://www.google.com/maps/place/Perry+Park/@42.3800344,-71.1037514,17z/data=!4m13!1m7!3m6!1s0x89e377359759d4f1:0xcdecfc966d18c6ce!2s321+Washington+St,+Somerville,+MA+02143!3b1!8m2!3d42.3800305!4d-71.1015627!3m4!1s0x89e37736086a055b:0x53808bd5cd386113!8m2!3d42.379563!4d-71.1034204" target="_blank">perry park</a> (take a right out of wsac, 2 min walk)
             <br />
             - jennie gottschalk, wsac parking Lot
             <br />
-            - chris strunk (scooter france), sidewalk by wsac
+            - chris strunk, <a href="https://www.google.com/maps/place/Lincoln+Park/@42.3800344,-71.1037514,17z/data=!4m13!1m7!3m6!1s0x89e377359759d4f1:0xcdecfc966d18c6ce!2s321+Washington+St,+Somerville,+MA+02143!3b1!8m2!3d42.3800305!4d-71.1015627!3m4!1s0x89e3774a815af34f:0xb415259c98d54b61!8m2!3d42.3782315!4d-71.0998309" target="_blank">lincoln park</a> (directly across the street from WSAC, 3 min walk)
             <br />
           </p>
           <p>
@@ -69,7 +69,7 @@
       </div>
       <div class="row">
         <div class="col-md-5 col-md-offset-1 col-sm-12">
-          <h3>Guest Artist Showcase #2</h3>
+          <h3>guest artist showcase #2</h3>
           <h4>sunday, 13 january 2019, 7pm</h4>
           <p class="p-top-5">
             <b> reaturing music by: </b>
@@ -92,11 +92,19 @@
           <h3>final concert</h3>
           <h4>saturday, 19 january 2019, 8pm</h4>
           <p class="p-top-5">
-            A presentation / performance of the artists' work and documentation accumulated during the Festival.
+            a presentation / performance of the artists' work and documentation accumulated during the festival.
           </p>
           <p>
             <a href="https://www.facebook.com/events/386601742094981/" target="_blank">facebook event</a>
           </p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-12 col-sm-12">
+          <br />
+          <h3>more events to be announced soon</h3>
+          <br />
+          <br />
         </div>
       </div>
     </div>
@@ -113,7 +121,7 @@
         </h3>
         <br />
          <p class="">
-          the third season of the co-incidence festival will take place from January 11—20, 2019, at Washington Street Art Center in Somerville, MA. as with the past two years, the overarching goal of the festival is to bring together experimental composers/performers/artists to focus on collaboration, critical discussion, workshopping, and performance. in 2019, this will last 8 full days (not including arrival and departure days). the festival is directed by experimental composer/performers aaron foster breilyn and luke martin.
+          the third season of the co-incidence festival will take place from january 11—20, 2019, at Washington Street Art Center in Somerville, MA. as with the past two years, the overarching goal of the festival is to bring together experimental composers/performers/artists to focus on collaboration, critical discussion, workshopping, and performance. in 2019, this will last 8 full days (not including arrival and departure days). the festival is directed by experimental composer/performers aaron foster breilyn and luke martin.
         </p>
         <!--<p>
           though there are conceptual areas of exploration that are common between iterations of the festival, the attending artists (both guest and resident) are encouraged to influence and even drastically alter the direction and activities of the festival. this year topics of focus will include  conversation as artistic labor, mapping as praxis, nomadic movement, and complicity as a mode of critical exchange between others. 
@@ -132,12 +140,15 @@
         <p>
           co-incidence will occur at Washington Street Art Center (WSAC) in Somerville, MA. the space will serve as a meeting place for discussion, workshop, performance, and a hot pot of coffee. activities may take place at WSAC (which also serves as an experimental music venue in Boston), though they are not limited to that space. in fact, we encourage activities that may occur anywhere in the city / Somerville / greater Boston area, be entirely based on the potential of their occurrence, and/or may not even be perceptible.
         </p> -->
-        <p>
+        <!-- <p>
           this year, the festival will follow a set of maps that score the flow of concepts and events, by way of nomadic movement through the structure of the residency. only certain major meeting points (arrival, departure, a couple pre-scheduled concerts) will be predetermined. the structure of the festival will be centered on daily conversations led by Sarah, and other impromptu events as they are determined collectively, by the group. last year, such impromptu events or activities included Ryoko making lunch for/with us at luke’s apartment, having Joachim lead us on a tour of the Museum of Fine Arts, and so on. 
-        </p>
+        </p> -->
         <p>
-          these are open and everyday situations; practices of being together. in preparation for our daily conversations, Sarah will present a toolbox of (~3) readings that highlight certain concepts important to the festival. free PDF’s of these readings, which will likely include essays by Deleuze & Guattari, Negarestani, and Brassier, will be available on our website after the artists are selected. while we will not be presenting on these readings or concepts, we will be moving the concepts, communally learning about and through them to build other possible structures/concepts/tactics.
+          the structure of the festival will include daily conversations led by sarah as well as various activities, existing somewhere between 'pieces' and everyday events, proposed by the artists. all is, as always, free and open to the public. such events, this year, will include the daily collective creation of white noise, a soundwalk in middlesex fells, searching for presence of mind on walden pond, a wine tasting, experimental modes of documentation, and so on. these are open and everyday situations; practices of being together.
         </p>
+<!--         <p>
+          these are open and everyday situations; practices of being together. in preparation for our daily conversations, Sarah will present a toolbox of (~3) readings that highlight certain concepts important to the festival. free PDF’s of these readings, which will likely include essays by Deleuze & Guattari, Negarestani, and Brassier, will be available on our website after the artists are selected. while we will not be presenting on these readings or concepts, we will be moving the concepts, communally learning about and through them to build other possible structures/concepts/tactics.
+        </p> -->
         <!-- <br />
         <h3 class="fugu-h3">
           logistics / economics
