--- a/app/assets/stylesheets/mine.scss
+++ b/app/assets/stylesheets/mine.scss
@@ -256,3 +256,17 @@ textarea.form-control {
 .m-top-10 {
   margin-top: 10px;
 }
+
+#secondaryNav {
+  margin-top: 50px;
+  background: #F05F40;
+  border-color: #F05F40;
+}
+
+.fugu-link {
+  color: #F05F40 !important;
+}
+
+.fugu-link::hover {
+  color: #F05F40 !important;
+}
