--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -39,7 +39,7 @@
           <a class="page-scroll" href="/home/#about">about</a>
         </li>
         <li>
-          <a class="page-scroll" href="/home/#logos">SUPPORT</a>
+          <a class="page-scroll fugu-link" href="/home/#logos">FUNDRAISER</a>
         </li>
       </ul>
     </div>
@@ -47,3 +47,7 @@
   </div>
   <!-- /.container-fluid -->
 </nav>
+<!-- 
+<nav id="secondaryNav" class="navbar navbar-default navbar-fixed-top">
+  <a href="meow">contribute to our fundraiser</a>
+</nav> -->
