--- a/app/views/home/sections/_logos.html.erb
+++ b/app/views/home/sections/_logos.html.erb
@@ -6,7 +6,30 @@
           SUPPORT
         </h2>
         <hr class="primary">
-        <p>
+        <div class="row">
+          <div class="col-sm-6">
+            <p>
+              please consider making a tax
+              <br /> deductible donation
+            </p>
+            <br />
+            <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+              <input type="hidden" name="cmd" value="_s-xclick" />
+              <input type="hidden" name="hosted_button_id" value="YCDPNSVLHBARU" />
+              <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" title="PayPal - The safer, easier way to pay online!" alt="Donate with PayPal button" />
+              <img alt="" border="0" src="https://www.paypal.com/en_US/i/scr/pixel.gif" width="1" height="1" />
+            </form>
+          </div>
+          <div class="col-sm-6">
+            <p>
+              we are currently running our <br /> first fundraiser to support the 2019 festival. 
+            </p>
+            <p>
+              <a href="https://www.crowdrise.com/o/en/campaign/2019-co-incidence-festival" target="_blank">please donate here</a>
+            </p>
+          </div>
+        </div>
+        <!-- <p>
           For tax deductible donations, please mail a check made out to CO-INCIDENCE, INC. to:
         </p>
         <br />
@@ -18,7 +41,7 @@
           134 Highland Ave, Apt 3
           <br />
           Somerville, MA 02143
-        </p>
+        </p> -->
       </div>
     </div>
     <br />
