reorganize donate stuff

--- a/app/views/home/sections/_logos.html.erb
+++ b/app/views/home/sections/_logos.html.erb
@@ -7,12 +7,27 @@
         </h2>
         <hr class="primary">
         <div class="row">
+          <div class="col-sm-12">
+            <p>
+              we are currently running our <br /> first fundraiser to support the 2019 festival. 
+            </p>
+            <h4>
+              <a href="https://www.crowdrise.com/o/en/campaign/2019-co-incidence-festival" target="_blank">please donate here</a>
+            </h4>
+            <br />
+            <br />
+          </div>
           <div class="col-sm-6">
             <p>
+              to make a tax deductible donation, please donate with paypal
+            </p>
+            <br />
+            <br />
+<!--             <p>
               please consider making a tax
               <br /> deductible donation
             </p>
-            <br />
+            <br /> -->
             <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
               <input type="hidden" name="cmd" value="_s-xclick" />
               <input type="hidden" name="hosted_button_id" value="YCDPNSVLHBARU" />
@@ -22,26 +37,25 @@
           </div>
           <div class="col-sm-6">
             <p>
-              we are currently running our <br /> first fundraiser to support the 2019 festival. 
+              or mail a check made out to CO-INCIDENCE, INC. to:
             </p>
             <p>
-              <a href="https://www.crowdrise.com/o/en/campaign/2019-co-incidence-festival" target="_blank">please donate here</a>
+              <small>
+
+              Co-Incidence, Inc.
+              <br />
+              C/o Luke Martin
+              <br />
+              134 Highland Ave, Apt 3
+              <br />
+              Somerville, MA 02143
+              </small>
             </p>
           </div>
+ 
+          </div>
         </div>
-        <!-- <p>
-          For tax deductible donations, please mail a check made out to CO-INCIDENCE, INC. to:
-        </p>
-        <br />
-        <p>
-          Co-Incidence, Inc.
-          <br />
-          C/o Luke Martin
-          <br />
-          134 Highland Ave, Apt 3
-          <br />
-          Somerville, MA 02143
-        </p> -->
+        
       </div>
     </div>
     <br />
