readings and calendar on page

--- a/app/views/home/sections/_intro2019.html.erb
+++ b/app/views/home/sections/_intro2019.html.erb
@@ -100,10 +100,32 @@
         </div>
       </div>
       <div class="row">
-        <div class="col-md-12 col-sm-12">
+        <div class="col-md-10 col-md-offset-1">
           <br />
-          <h3>more events to be announced soon</h3>
+          <h3><a href="https://docs.google.com/spreadsheets/d/1meZOI8AK1CWchbS5ZL0Uv-6-VBe4P8KWcjLjRo8nRL0/edit?usp=sharing" target="_blank">a calendar of events can be found here</a></h3>
           <br />
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-md-6 col-md-offset-3 col-sm-12">
+          <p>
+            during the festival the morning discussions will center around a currated list of readings, including:
+            <ul class="eventUl">
+              <li>
+                'Acid Communism' by Mark Fisher
+              </li>
+              <li>
+                'Leverage Points:Places to Intervene in a System' by Donella Meadows
+              </li>
+              <li>
+                Excerpts from 'Intelligence and Spirit' and 'Cyclonopedia' by Reza Negarestani
+              </li>
+              <li>
+                'Chapter 12. 1227: Treatise on Nomadology-The War Machine' from 'A Thousand Plateaus' by Gilles Deleuze and Félix Guattari
+              </li>
+            </ul>
+          </p>
+          <p>if you're interested in a copy of the readings, please <a href="mailto:coincidence.festival@gmail.com">email us</a></p>
           <br />
         </div>
       </div>
