--- a/app/assets/stylesheets/creative.scss
+++ b/app/assets/stylesheets/creative.scss
@@ -190,7 +190,9 @@ header {
   background-position: center;
   // background-image: asset_url("header.jpg");
   // background-image: asset_url("joachim-sky.jpg");
-  background-image: asset_url("sarah-pic.png");
+  // background-image: asset_url("sarah-pic.png");
+  background-image: asset_url("2020/thing.jpg");
+
   text-align: center;
   color: white;
 }
