--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,7 +1,7 @@
 <%= render 'home/sections/notification' %>
 <%= render 'home/sections/hero' %>
 <%= render 'home/sections/description' %>
-<%= render 'home/sections/intro2019' %>
+<%= render 'home/sections/intro2020' %>
 
 <%#= render 'home/sections/details' %>
 <%= render 'home/sections/partners' %>
@@ -9,7 +9,7 @@
 <%#= render 'home/sections/application2' %>
 
 <%#= render 'home/sections/guest_artists_2018' %>
-<%= render 'home/sections/guest_artists_2019' %>
+<%#= render 'home/sections/guest_artists_2019' %>
 
 <%= render 'home/sections/about' %>
 <%= render 'home/sections/logos' %>
