--- a/app/views/home/sections/_description.html.erb
+++ b/app/views/home/sections/_description.html.erb
@@ -30,7 +30,10 @@
         </p>
         <br />
         <p class="text-faded">
-            check out some media from our <a href="/2017-season">2017</a> or <a href="/2018-season">2018</a> season.
+            check out some media from our <a href="/2017-season">2017</a>,
+            <a href="/2018-season">2018</a>
+            or
+            <a href="/2019-season">2019</a> season.
         </p>
         
       </div>
