--- a/app/views/home/sections/_intro2019.html.erb
+++ b/app/views/home/sections/_intro2019.html.erb
@@ -10,7 +10,7 @@
     </div>
   </div>
 
-  <div class="container">
+  <!-- <div class="container">
     <div class="row text-center">
       <div class="col-md-10 col-md-offset-1">
         <h3 class="fugu-h3">
@@ -131,19 +131,19 @@
       </div>
     </div>
   </div>
-
+ -->
 
 
   <div class="container">
     <div class="row text-center">
       <div class="col-md-10 col-md-offset-1">
-        <h3 class="fugu-h3">
-          <!-- INTRODUCTION -->
+<!--         <h3 class="fugu-h3">
+          INTRODUCTION
           DESCRIPTION
         </h3>
-        <br />
+        <br /> -->
          <p class="">
-          the third season of the co-incidence festival will take place from january 11—20, 2019, at Washington Street Art Center in Somerville, MA. as with the past two years, the overarching goal of the festival is to bring together experimental composers/performers/artists to focus on collaboration, critical discussion, workshopping, and performance. in 2019, this will last 8 full days (not including arrival and departure days). the festival is directed by experimental composer/performers aaron foster breilyn and luke martin.
+          the third season of the co-incidence festival took place from january 11—20, 2019, at Washington Street Art Center in Somerville, MA. as with the past years, the overarching goal of the festival was to bring together experimental composers/performers/artists to focus on collaboration, critical discussion, workshopping, and performance. in 2019, the festival lasted 8 full days (not including arrival and departure days). the festival is directed by experimental composer/performers aaron foster breilyn and luke martin.
         </p>
         <!--<p>
           though there are conceptual areas of exploration that are common between iterations of the festival, the attending artists (both guest and resident) are encouraged to influence and even drastically alter the direction and activities of the festival. this year topics of focus will include  conversation as artistic labor, mapping as praxis, nomadic movement, and complicity as a mode of critical exchange between others. 
@@ -166,7 +166,7 @@
           this year, the festival will follow a set of maps that score the flow of concepts and events, by way of nomadic movement through the structure of the residency. only certain major meeting points (arrival, departure, a couple pre-scheduled concerts) will be predetermined. the structure of the festival will be centered on daily conversations led by Sarah, and other impromptu events as they are determined collectively, by the group. last year, such impromptu events or activities included Ryoko making lunch for/with us at luke’s apartment, having Joachim lead us on a tour of the Museum of Fine Arts, and so on. 
         </p> -->
         <p>
-          the structure of the festival will include daily conversations led by sarah as well as various activities, existing somewhere between 'pieces' and everyday events, proposed by the artists. all is, as always, free and open to the public. such events, this year, will include the daily collective creation of white noise, a soundwalk in middlesex fells, searching for presence of mind on walden pond, a wine tasting, experimental modes of documentation, and so on. these are open and everyday situations; practices of being together.
+          the structure of the festival included daily conversations led by sarah pitan as well as various activities, existing somewhere between 'pieces' and everyday events, proposed by the artists. as always, everything was free and open to the public. these events included such activities as: the daily collective creation of white noise, a soundwalk in middlesex fells, searching for presence of mind on walden pond, a wine tasting, experimental modes of documentation, and so on. these are open and everyday situations; practices of being together.
         </p>
 <!--         <p>
           these are open and everyday situations; practices of being together. in preparation for our daily conversations, Sarah will present a toolbox of (~3) readings that highlight certain concepts important to the festival. free PDF’s of these readings, which will likely include essays by Deleuze & Guattari, Negarestani, and Brassier, will be available on our website after the artists are selected. while we will not be presenting on these readings or concepts, we will be moving the concepts, communally learning about and through them to build other possible structures/concepts/tactics.
@@ -185,7 +185,7 @@
         </h3>
         <br /> -->
         <p>
-          we are creating this festival as a conscious instance of composition as social practice. we hope that this act and ethos becomes even further developed during the course of our work together. ultimately, we hope that this can become a truly special week of collaboration, discussion, performance, and composition; one in which we can form lasting and caring relationships, establish practical tactics with which we can hone our daily practices and challenge structures of capital, and investigate radically alternative modes of being, thinking, and relating.
+          this festival is a conscious instance of composition as social practice. we hope that this act and ethos becomes even further developed during the course of our work together. ultimately, we hope that this becomes a truly special week of collaboration, discussion, performance, and composition; one in which we can form lasting and caring relationships, establish practical tactics with which we can hone our daily practices and challenge structures of capital, and investigate radically alternative modes of being, thinking, and relating.
         </p>
         <br />
         <br />
