--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -20,7 +20,10 @@
           <a class="" href="/application">APPLICATION</a>
         </li> -->
         <li>
-          <a class="page-scroll" href="2018-season">2018 SEASON</a>
+          <a class="" href="2019-season">2019 SEASON</a>
+        </li>
+        <li>
+          <a class="" href="2018-season">2018 SEASON</a>
         </li>
         <li>
           <a class="" href="2017-season">2017 SEASON</a>
