long over due updates and such. bleh

--- a/app/views/home/sections/_guest_artists_2019.html.erb
+++ b/app/views/home/sections/_guest_artists_2019.html.erb
@@ -164,19 +164,11 @@
         </div>
         <div class="col-xs-12 col-sm-9 centered-xs">
           <p class="text-faded">
-            Angeles Rojas is a composer from Buenos Aires,
+            Angeles Rojas is a composer from Buenos Aires, Argentina.
             <br />
-            Argentina.
+            In her music she frequently explores natural and subtle sounds, developing one single idea as a whole concept and giving time and space to each intention.
             <br />
-            In her music she frequently explores natural and subtle
-            <br />
-            sounds, developing one single idea as a whole concept
-            <br />
-            and giving time and space to each intention.
-            <br />
-            In her free time she likes to be surrounded by nature,
-            <br />
-            observing the changes of light and sound.
+            In her free time she likes to be surrounded by nature, observing the changes of light and sound.
           </p>
         </div>
       </div>
