--- a/app/views/home/sections/_intro2017.html.erb
+++ b/app/views/home/sections/_intro2017.html.erb
@@ -24,7 +24,7 @@
         </p>
         <hr class="primary">
         <p>
-          you can read more about out festival in the 
+          you can read more about our festival in the 
           <a href="http://www.bostonglobe.com/arts/music/2017/01/25/all-hands-deck-experimental-music-fest-somerville/41ygk4NGqSzHe72ir86v1I/story.html?s_campaign=bostonglobe%3Asocial%3Agoogleamp%3Asharetools" target="_blank">
             Boston Globe
           </a>
