--- a/app/views/home/sections/_logos.html.erb
+++ b/app/views/home/sections/_logos.html.erb
@@ -7,7 +7,7 @@
         </h2>
         <hr class="primary">
         <div class="row">
-          <div class="col-sm-12">
+          <!-- <div class="col-sm-12">
             <p>
               we are currently running our <br /> first fundraiser to support the 2019 festival. 
             </p>
@@ -16,7 +16,7 @@
             </h4>
             <br />
             <br />
-          </div>
+          </div> -->
           <div class="col-sm-6">
             <p>
               to make a tax deductible donation, please donate with paypal
