--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -20,6 +20,9 @@
           <a class="" href="/application">APPLICATION</a>
         </li> -->
         <li>
+          <a class="page-scroll" href="/home/#intro2020">2020 SEASON</a>
+        </li>
+        <li>
           <a class="" href="2019-season">2019 SEASON</a>
         </li>
         <li>
@@ -28,9 +31,9 @@
         <li>
           <a class="" href="2017-season">2017 SEASON</a>
         </li>
-        <li>
+        <!-- <li>
           <a class="page-scroll" href="/home/#describe">Details</a>
-        </li>
+        </li> -->
         <li>
           <a class="page-scroll" href="/home/#partners">COLLABORATORS</a>
         </li>
@@ -42,7 +45,7 @@
           <a class="page-scroll" href="/home/#about">about</a>
         </li>
         <li>
-          <a class="page-scroll fugu-link" href="/home/#logos">FUNDRAISER</a>
+          <a class="page-scroll fugu-link" href="/home/#logos">support</a>
         </li>
       </ul>
     </div>
