--- a/app/views/home/sections/_about.html.erb
+++ b/app/views/home/sections/_about.html.erb
@@ -22,11 +22,32 @@
            had a far too grandiose idea: "let's do our own music festival!" (un)fortunately, they don't know when to stop. and here we are, with the co-incidence festival which kicked off its first season in January 2017. we wanted to fill a perceived gap in support for experimental composer/performers in the U.S. with a music festival focused on experimental music and built as an experimental composer might build a piece.
            <br />
            <br />
-           you can check out our article in the
-            <a href="http://www.bostonglobe.com/arts/music/2017/01/25/all-hands-deck-experimental-music-fest-somerville/41ygk4NGqSzHe72ir86v1I/story.html?s_campaign=bostonglobe%3Asocial%3Agoogleamp%3Asharetools" target="_blank">
-              Boston Globe here
+           press:
+           <br />
+            <a href="http://www.bostonglobe.com/arts/music/2017/01/25/all-hands-deck-experimental-music-fest-somerville/41ygk4NGqSzHe72ir86v1I/story.html?s_campaign=bostonglobe%3Asocial%3Agoogleamp%3Asharetools"
+              target="_blank">
+              Boston Globe
             </a>
-            .
+            ||
+            <a href="https://www.youtube.com/watch?v=mWbD-xu96OQ&t=1s"
+              target="_blank">
+              Somerville Media Center Video
+            </a>
+            ||
+            <a href="http://www.thesomervilletimes.com/archives/81444"
+              target="_blank">
+              The Somerville Times
+            </a>
+            ||
+            <a href="https://www.wbur.org/artery/2019/01/10/co-incidence-festival-experimental-music"
+              target="_blank">
+              WBUR
+            </a>
+            <br />
+            <a href="http://www.soundexpanse.com/the-co-incidence-festival/">
+              In-Depth Interviews with Jennie Gottschalk (Sound Expanse) [Aaron, Luke, Jennie, Sarah]
+            </a>
+            
         </p>
         <br />
         <br />
