--- a/app/views/home/sections/_intro2019.html.erb
+++ b/app/views/home/sections/_intro2019.html.erb
@@ -188,6 +188,9 @@
           this festival is a conscious instance of composition as social practice. we hope that this act and ethos becomes even further developed during the course of our work together. ultimately, we hope that this becomes a truly special week of collaboration, discussion, performance, and composition; one in which we can form lasting and caring relationships, establish practical tactics with which we can hone our daily practices and challenge structures of capital, and investigate radically alternative modes of being, thinking, and relating.
         </p>
         <br />
+        <p>
+          please checkout our writeup by <a href="https://www.wbur.org/artery/2019/01/10/co-incidence-festival-experimental-music" target="_blank">WBUR</a>
+        </p>
         <br />
         <br />
         <br />
