--- a/app/views/home/sections/_intro2020.html.erb
+++ b/app/views/home/sections/_intro2020.html.erb
@@ -24,6 +24,8 @@
         <br />
         <br />
         <hr class="tertiary">
+        <h4><a class="" href="/application">Please apply here</a></h4>
+        <hr class="tertiary">
         </div>
       </div>
     </div>
