--- a/app/views/home/sections/_notification.html.erb
+++ b/app/views/home/sections/_notification.html.erb
@@ -1,4 +1,4 @@
-<% if @coincidentTroi %>
+<% if @fourthYear %>
 <div class="notification">
   <br />
   <br />
@@ -11,7 +11,7 @@
         <p class="text-faded"
           style="padding-bottom: 15px;"
         >
-          Application for <span class="reddish"><%= @coincidentTroi.name %></span> has been successfully submitted. Thanks!
+          Application for <span class="reddish"><%= @fourthYear.name %></span> has been successfully submitted. Thanks!
         </p>
       </div>
     </div>
