--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -16,21 +16,31 @@
 <!--         <li>
           <a class="page-scroll" href="#about">About</a>
         </li> -->
-<!--         <li>
+        <li>
           <a class="" href="/application">APPLICATION</a>
-        </li> -->
+        </li>
+        <li>
+            <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Past Seasons
+            </a>
+
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+              <li>
+                    <a class="" href="2019-season">2019 SEASON</a>
+                  </li>
+                  <li>
+                    <a class="" href="2018-season">2018 SEASON</a>
+                  </li>
+                  <li>
+                    <a class="" href="2017-season">2017 SEASON</a>
+                  </li>
+            </ul>
+        </li>
+
         <li>
           <a class="page-scroll" href="/home/#intro2020">2020 SEASON</a>
         </li>
-        <li>
-          <a class="" href="2019-season">2019 SEASON</a>
-        </li>
-        <li>
-          <a class="" href="2018-season">2018 SEASON</a>
-        </li>
-        <li>
-          <a class="" href="2017-season">2017 SEASON</a>
-        </li>
+        
         <!-- <li>
           <a class="page-scroll" href="/home/#describe">Details</a>
         </li> -->
